EKS-Production-IAC/micro-service-deployments/k8s/02-user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: shopflow
  labels: { app: user-service }
spec:
  replicas: 2
  selector:
    matchLabels: { app: user-service }
  template:
    metadata:
      labels: { app: user-service }
    spec:
      containers:
        - name: user-service
          image: 825765392987.dkr.ecr.us-east-1.amazonaws.com/user-service-ms-rd
          ports:
            - containerPort: 8001
          readinessProbe:
            httpGet: { path: /health/, port: 8001 }
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /health/, port: 8001 }
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests: { cpu: "100m", memory: "192Mi" }
            limits: { cpu: "500m", memory: "384Mi" }
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: shopflow
spec:
  selector: { app: user-service }
  ports:
    - port: 8001
      targetPort: 8001
  type: ClusterIP
