EKS-Production-IAC/micro-service-deployments/k8s/03-product-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: shopflow
  labels: { app: product-service }
spec:
  replicas: 2
  selector:
    matchLabels: { app: product-service }
  template:
    metadata:
      labels: { app: product-service }
    spec:
      serviceAccountName: product-service-sa
      containers:
        - name: product-service
          image: 825765392987.dkr.ecr.us-east-1.amazonaws.com/ms-product-rg
          ports:
            - containerPort: 8002
          readinessProbe:
            httpGet: { path: /health/, port: 8002 }
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /health/, port: 8002 }
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests: { cpu: "100m", memory: "192Mi" }
            limits: { cpu: "500m", memory: "384Mi" }
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: shopflow
spec:
  selector: { app: product-service }
  ports:
    - port: 8002
      targetPort: 8002
  type: ClusterIP
