EKS-Production-IAC/micro-service-deployments/k8s/04-order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: shopflow
  labels: { app: order-service }
spec:
  replicas: 2
  selector:
    matchLabels: { app: order-service }
  template:
    metadata:
      labels: { app: order-service }
    spec:
      containers:
        - name: order-service
          image: 825765392987.dkr.ecr.us-east-1.amazonaws.com/ms-order-service-rg
          ports:
            - containerPort: 8003
          readinessProbe:
            httpGet: { path: /health/, port: 8003 }
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /health/, port: 8003 }
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests: { cpu: "100m", memory: "192Mi" }
            limits: { cpu: "500m", memory: "384Mi" }
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: shopflow
spec:
  selector: { app: order-service }
  ports:
    - port: 8003
      targetPort: 8003
  type: ClusterIP
