EKS-Production-IAC/micro-service-deployments/k8s/05-notification-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: shopflow
  labels: { app: notification-service }
spec:
  replicas: 2
  selector:
    matchLabels: { app: notification-service }
  template:
    metadata:
      labels: { app: notification-service }
    spec:
      containers:
        - name: notification-service
          image: 825765392987.dkr.ecr.us-east-1.amazonaws.com/ms-notification-service-rg
          ports:
            - containerPort: 8004
          readinessProbe:
            httpGet: { path: /health/, port: 8004 }
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /health/, port: 8004 }
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests: { cpu: "100m", memory: "192Mi" }
            limits: { cpu: "500m", memory: "384Mi" }
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: shopflow
spec:
  selector: { app: notification-service }
  ports:
    - port: 8004
      targetPort: 8004
  type: ClusterIP
